JumpScript/tests/baselines/reference/unclosedExportClause02.errors.txt
tests/cases/compiler/t2.jump(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t2.jump(1,13): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t2.jump(2,5): error TS1005: ',' expected.
tests/cases/compiler/t3.jump(1,10): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t3.jump(2,5): error TS1005: ',' expected.
tests/cases/compiler/t4.jump(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t4.jump(1,17): error TS1005: ',' expected.
tests/cases/compiler/t4.jump(1,17): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t4.jump(2,5): error TS1005: ',' expected.
tests/cases/compiler/t5.jump(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t5.jump(1,18): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t5.jump(2,5): error TS1005: ',' expected.


==== tests/cases/compiler/t1.jump (0 errors) ====
    export var x = "x";
    
==== tests/cases/compiler/t2.jump (3 errors) ====
    export { x, from
             ~
!!! error TS2304: Cannot find name 'x'.
                ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t3.jump (2 errors) ====
    export { from
             ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t4.jump (4 errors) ====
    export { x as a from
             ~
!!! error TS2304: Cannot find name 'x'.
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t5.jump (3 errors) ====
    export { x as a, from
             ~
!!! error TS2304: Cannot find name 'x'.
                     ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.